# bitvis-protobuf

./: pyproject.toml
.github/workflows/: workflow.yml
scripts/: generate_proto.py
src/bitvis_protobuf/: __init__.py  cli.py  diagnostic_pb2.py  listener.py  parse.py  powerhub_pb2.py  utils.py
